[tool.poetry]
name = "asyncdbdriverseveralsources"
version = "0.1.0"
description = ""
authors = ["rpopov <rpopov@web-bee.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
sqlalchemy = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
